screen media for 768px and 1366px

--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -5,22 +5,22 @@
         <div class="problems-list-block">
             <ol class="problems-list list">
                 <li class="problems-item">
-                    <br>Grammar
+                    Grammar
                 </li>
                 <li class="problems-item">
-                    <br>Inability to understand spoken English
+                    Inability to understand spoken English
                 </li>
                 <li class="problems-item">
-                    <br>Stingy vocabulary for writing an essay
+                    Stingy vocabulary for writing an essay
                 </li>
                 <li class="problems-item">
-                    <br>Preparing alone
+                    Preparing alone
                 </li>
                 <li class="problems-item">
-                    <br>Lack of a single knowledge resource
+                    Lack of a single knowledge resource
                 </li>
                 <li class="problems-item">
-                    <br>Lack of self-organization and laziness
+                    Lack of self-organization and laziness
                 </li>
             </ol>
         </div>
