--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -1,118 +1,118 @@
-<section class="Program">
-  <div class="Program-container container">
-    <h2 class="Program-title">Our program</h2>
-    <ul class="Program-list list">
-      <li class="Program-item">
-        <div class="Program-item-container">
-          <h3 class="Program-h3">1 semester</h3>
-          <ul class="list">
-            <li class="Program-key-points">
-              <h4 class="Program-h4">— Grammar</h4>
+<section class="program">
+  <div class="program-container container">
+    <h2 class="program-title">Our program</h2>
+    <ul class="program-list list">
+      <li class="program-item">
+        <div class="program-item-container">
+          <h3 class="program-h3">1 semester</h3>
+          <ul class="list program-education-list">
+            <li class="program-key-points">
+              <h4 class="program-h4">— Grammar</h4>
               <ul class="list">
-                <li class="Program-points-description">Nouns & Articles</li>
-                <li class="Program-points-description">Adjectives & Adverb</li>
+                <li class="program-points-description">Nouns & Articles</li>
+                <li class="program-points-description">Adjectives & Adverb</li>
               </ul>
             </li>
-            <li class="Program-key-points">
-              <h4 class="Program-h4">— Vocabulary</h4>
+            <li class="program-key-points">
+              <h4 class="program-h4">— Vocabulary</h4>
               <ul class="list">
-                <li class="Program-points-description">Family & Relations</li>
-                <li class="Program-points-description">People & Society</li>
+                <li class="program-points-description">Family & Relations</li>
+                <li class="program-points-description">People & Society</li>
               </ul>
             </li>
           </ul>
         </div>
       </li>
-      <li class="Program-item">
-        <h3 class="Program-h3">2 semester</h3>
-        <ul class="list">
-          <li class="Program-key-points">
-            <h4 class="Program-h4">— Grammar</h4>
+      <li class="program-item">
+        <h3 class="program-h3">2 semester</h3>
+        <ul class="list program-education-list">
+          <li class="program-key-points">
+            <h4 class="program-h4">— Grammar</h4>
             <ul class="list">
-              <li class="Program-points-description">Pronouns</li>
-              <li class="Program-points-description">Active Voice</li>
-              <li class="Program-points-description">Passive Voice</li>
+              <li class="program-points-description">Pronouns</li>
+              <li class="program-points-description">Active Voice</li>
+              <li class="program-points-description">Passive Voice</li>
             </ul>
           </li>
-          <li class="Program-key-points">
-            <h4 class="Program-h4">— Vocabulary</h4>
+          <li class="program-key-points">
+            <h4 class="program-h4">— Vocabulary</h4>
             <ul class="list">
-              <li class="Program-points-description">Home</li>
-              <li class="Program-points-description">School</li>
-              <li class="Program-points-description">Work</li>
-            </ul>
-          </li>
-        </ul>
-      </li>
-      <li class="Program-item">
-        <h3 class="Program-h3">3 semester</h3>
-        <ul class="list">
-          <li class="Program-key-points">
-            <h4 class="Program-h4">— Grammar</h4>
-            <ul class="list">
-              <li class="Program-points-description">Modal verbs</li>
-              <li class="Program-points-description">Infinitive Gerund</li>
-              <li class="Program-points-description">Participle: 1, 2</li>
-            </ul>
-          </li>
-          <li class="Program-key-points">
-            <h4 class="Program-h4">— Vocabulary</h4>
-            <ul class="list">
-              <li class="Program-points-description">Travel & Tourism</li>
-              <li class="Program-points-description">Culture & Free Time</li>
-              <li class="Program-points-description">Sport</li>
-            </ul>
-          </li>
-          <li class="Program-key-points">
-            <h4 class="Program-h4">— Vocabulary</h4>
-            <ul class="list">
-              <li class="Program-points-description">Informal Letter</li>
+              <li class="program-points-description">Home</li>
+              <li class="program-points-description">School</li>
+              <li class="program-points-description">Work</li>
             </ul>
           </li>
         </ul>
       </li>
-      <li class="Program-item">
-        <h3 class="Program-h3">4 semester</h3>
-        <ul class="list">
-          <li class="Program-key-points">
-            <h4 class="Program-h4">— Grammar</h4>
+      <li class="program-item">
+        <h3 class="program-h3">3 semester</h3>
+        <ul class="list program-education-list">
+          <li class="program-key-points">
+            <h4 class="program-h4">— Grammar</h4>
             <ul class="list">
-              <li class="Program-points-description">Clauses: Conditional and Wishes</li>
-              <li class="Program-points-description">Direct / Reported speech</li>
-              <li class="Program-points-description">Preposition</li>
-              <li class="Program-points-description">Conjunction</li>
-              <li class="Program-points-description">Numeral</li>
+              <li class="program-points-description">Modal verbs</li>
+              <li class="program-points-description">Infinitive Gerund</li>
+              <li class="program-points-description">Participle: 1, 2</li>
             </ul>
           </li>
-          <li class="Program-key-points">
-            <h4 class="Program-h4">— Vocabulary</h4>
+          <li class="program-key-points">
+            <h4 class="program-h4">— Vocabulary</h4>
             <ul class="list">
-              <li class="Program-points-description">Healthy Living</li>
-              <li class="Program-points-description">Nature & Environment</li>
-              <li class="Program-points-description">Money</li>
+              <li class="program-points-description">Travel & Tourism</li>
+              <li class="program-points-description">Culture & Free Time</li>
+              <li class="program-points-description">Sport</li>
             </ul>
           </li>
-          <li class="Program-key-points">
-            <h4 class="Program-h4">— Vocabulary</h4>
+          <li class="program-key-points">
+            <h4 class="program-h4">— Vocabulary</h4>
             <ul class="list">
-              <li class="Program-points-description">Formal Letter</li>
+              <li class="program-points-description">Informal Letter</li>
             </ul>
           </li>
         </ul>
       </li>
-      <li class="Program-item">
-        <h3 class="Program-h3">5 semester</h3>
-        <ul class="list">
-          <li class="Program-key-points"><h4 class="Program-h4">—</h4></li>
+      <li class="program-item">
+        <h3 class="program-h3">4 semester</h3>
+        <ul class="list program-education-list">
+          <li class="program-key-points">
+            <h4 class="program-h4">— Grammar</h4>
+            <ul class="list">
+              <li class="program-points-description">Clauses: Conditional and Wishes</li>
+              <li class="program-points-description">Direct / Reported speech</li>
+              <li class="program-points-description">Preposition</li>
+              <li class="program-points-description">Conjunction</li>
+              <li class="program-points-description">Numeral</li>
+            </ul>
+          </li>
+          <li class="program-key-points">
+            <h4 class="program-h4">— Vocabulary</h4>
+            <ul class="list">
+              <li class="program-points-description">Healthy Living</li>
+              <li class="program-points-description">Nature & Environment</li>
+              <li class="program-points-description">Money</li>
+            </ul>
+          </li>
+          <li class="program-key-points">
+            <h4 class="program-h4">— Vocabulary</h4>
+            <ul class="list">
+              <li class="program-points-description">Formal Letter</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li class="program-item">
+        <h3 class="program-h3">5 semester</h3>
+        <ul class="list program-education-list program-education-list-mod">
+          <li class="program-key-points"><h4 class="program-h4">—</h4></li>
           <li>
-            <ul class="list Program-photo">
-              <li class="Program-points-description">Revision</li>
-              <li class="Program-points-description">Tests</li>
+            <ul class="list program-photo">
+              <li class="program-points-description">Revision</li>
+              <li class="program-points-description">Tests</li>
             </ul>
           </li>
         </ul>
       </li>
     </ul>
-    <h2 class="Program-title sub-title">Why do people choose us</h2>
+    <h2 class="program-title sub-title">Why do people choose us</h2>
   </div>
 </section>
