--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -1,23 +1,23 @@
-//-----------------MOBILE-----------------------------------
-.Program {
+//------------280-480px-MOBILE-----------------------------------
+.program {
   background-color: $primary-black-color;
   padding-top: 50px;
   padding-bottom: 437px;
 }
-.Program-title {
+.program-title {
   font-weight: 800;
   font-size: 20px;
   line-height: 1.3;
   letter-spacing: 0.03em;
   text-align: center;
   color: $primary-white-color;
-  margin-bottom: 43px;
 }
-.Program-list {
+.program-list {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 62px;
+  margin-left: 63px;
+  margin-top: 43px;
   position: relative;
   align-self: center;
   &::after {
@@ -28,17 +28,16 @@
     background: url('../images/content/mobile/program-mob@2x.png');
     background-size: contain;
     opacity: 0.5;
-    height: 137px;
     width: 120px;
+    height: 137px;
     bottom: -97px;
     right: -20px;
-    // transform: translate(-50%, 50%);
   }
 }
-.Program-item {
+.program-item {
   position: relative;
   padding-left: 20px;
-  width: 176px;
+
   box-sizing: content-box;
   &:not(:last-child) {
     padding-bottom: 40px;
@@ -57,7 +56,7 @@
     }
   }
 }
-.Program-h3 {
+.program-h3 {
   font-weight: bold;
   font-size: 14px;
   line-height: 2;
@@ -79,14 +78,17 @@
     z-index: 2;
   }
 }
-.Program-key-points {
+.program-education-list {
+  width: 176px;
+}
+.program-key-points {
   font-size: 12px;
   line-height: 1.649;
   &:not(:first-child) {
     margin-top: 8px;
   }
 }
-.Program-h4 {
+.program-h4 {
   font-weight: bold;
   line-height: 1.649;
   color: $accent-color;
@@ -96,7 +98,7 @@
   align-items: center;
   letter-spacing: inherit;
 }
-.Program-points-description {
+.program-points-description {
   font-weight: 500;
   font-size: 12px;
   line-height: 1.67;
@@ -109,6 +111,68 @@
   text-align: left;
   width: 180px;
   margin-top: 50px;
-  margin-bottom: 30px;
-  display: inline-block;
+  // margin-bottom: 30px;
+  display: block;
+}
+//-----------TABLET-768px-------------------------
+@media screen and (min-width: 768px) {
+  .program {
+    padding-top: 60px;
+    padding-bottom: 172px;
+  }
+  .program-title {
+    font-size: 26px;
+    text-align: left;
+  }
+  .program-list {
+    align-items: stretch;
+    margin-top: 52px;
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      background: url('../images/content/tablet/program-tab@2x.png');
+      background-size: contain;
+      width: 384px;
+      height: 280px;
+      bottom: -139px;
+      right: -40px;
+    }
+  }
+  .program-item {
+    padding-left: 56px;
+  }
+  .program-h3 {
+    &::before {
+      left: -56px;
+    }
+  }
+  .program-education-list {
+    display: flex;
+  }
+  .program-education-list :nth-child(1) {
+    flex: none;
+    width: 176px;
+  }
+  .program-education-list :nth-child(2) {
+    width: 155px;
+  }
+  .program-education-list :nth-child(3) {
+    width: 110px;
+  }
+  .program-education-list-mod {
+    flex-direction: column;
+  }
+  .program-key-points {
+    &:not(:first-child) {
+      margin-top: 0px;
+      margin-left: 50px;
+    }
+  }
+  .sub-title {
+    line-height: 1.36;
+    text-align: center;
+    width: 100%;
+    margin-top: 189px;
+  }
 }
