--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -12,6 +12,16 @@
   overflow: hidden;
 }
 
+body {
+  background-color: #ffffff;
+  color: #111518;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.56;
+  letter-spacing: 0.08em;
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -47,8 +57,8 @@ ol {
 }
 
 .container {
-  padding-left: 26px;
-  padding-right: 26px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin: 0 auto;
 }
 
@@ -61,12 +71,16 @@ ol {
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
 
 @media screen and (min-width: 1366px) {
   .container {
     width: 1366px;
+    padding-left: 26px;
+    padding-right: 26px;
   }
 }
 
@@ -102,23 +116,23 @@ ol {
   }
 }
 
-.Program {
+.program {
   background-color: #111518;
   padding-top: 50px;
   padding-bottom: 437px;
-  letter-spacing: 0.03em;
 }
 
-.Program__title {
+.program-title {
   font-weight: 800;
   font-size: 20px;
   line-height: 1.3;
+  letter-spacing: 0.03em;
   text-align: center;
   color: #ffffff;
   margin-bottom: 43px;
 }
 
-.Program__list {
+.program-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -126,37 +140,63 @@ ol {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-left: 62px;
-  /*   &::before {
-    content: '';
-    display: block;
-    position: absolute;
-    height: 1282px;
-    border-left: 1px solid $primary-white-color;
-    transform: translate(-50%);
-    //  left: -20px;
-  } */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 63px;
+  position: relative;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
-.Program__item {
+.program-list::after {
+  content: '';
+  display: block;
+  position: absolute;
+  background: url("../images/content/mobile/program-mob@2x.png");
+  background-size: contain;
+  opacity: 0.5;
+  height: 137px;
+  width: 120px;
+  bottom: -97px;
+  right: -20px;
+}
+
+.program-item {
+  position: relative;
+  padding-left: 20px;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+}
+
+.program-item:not(:last-child) {
+  padding-bottom: 40px;
+}
+
+.program-item:not(:last-child)::before {
+  content: '';
+  display: block;
+  position: absolute;
   border-left: 1px solid #ffffff;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  left: 0;
+  top: 10px;
+  height: 100%;
+  z-index: 1;
 }
 
-.Program__item:not(:first-child) {
-  padding-top: 40px;
-}
-
-.Program__h3 {
+.program-h3 {
   font-weight: bold;
   font-size: 14px;
   line-height: 2;
-  letter-spacing: 0.08em;
   text-transform: uppercase;
   color: #ffffff;
   position: relative;
+  margin-bottom: 5px;
 }
 
-.Program__h3::before {
+.program-h3::before {
   content: '';
   display: block;
   width: 12px;
@@ -168,27 +208,174 @@ ol {
   -webkit-transform: translate(-50%, 50%);
           transform: translate(-50%, 50%);
   left: -20px;
+  z-index: 2;
 }
 
-.Program__item {
-  width: 176px;
-  position: relative;
-}
-
-.Program__key-points {
-  font-weight: bold;
+.program-key-points {
   font-size: 12px;
   line-height: 1.649;
-  letter-spacing: 0.08em;
-  color: #ff6b09;
 }
 
-.Program__points-description {
+.program-key-points:not(:first-child) {
+  margin-top: 8px;
+}
+
+.program-h4 {
+  font-weight: bold;
+  line-height: 1.649;
+  color: #ff6b09;
+  margin-bottom: 5px;
+  height: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  letter-spacing: inherit;
+}
+
+.program-points-description {
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.66;
-  letter-spacing: 0.08em;
+  line-height: 1.67;
   color: #b9b9b9;
   opacity: 0.5;
+  letter-spacing: 0.08em;
+}
+
+.sub-title {
+  line-height: 1.36;
+  text-align: left;
+  width: 180px;
+  margin-top: 50px;
+  margin-bottom: 30px;
+  display: inline-block;
+}
+
+@media screen and (min-width: 480px) {
+  .program {
+    padding-top: 60px;
+    padding-bottom: 172px;
+  }
+  .program-title {
+    font-size: 26px;
+    text-align: left;
+    margin-bottom: 52px;
+  }
+  .program-list {
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+    /*   &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    background: url('../images/content/mobile/program-mob@2x.png');
+    background-size: contain;
+    opacity: 0.5;
+    height: 137px;
+    width: 120px;
+    bottom: -97px;
+    right: -20px;
+    // transform: translate(-50%, 50%);*/
+  }
+  .program-item {
+    padding-left: 56px;
+    /*   &:not(:last-child) {
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      border-left: 1px solid $primary-white-color;
+      transform: translate(-50%);
+      left: 0;
+      top: 10px;
+      height: 100%;
+      z-index: 1;
+    }
+  } */
+  }
+  .program-h3 {
+    /*   font-weight: bold;
+  font-size: 14px;
+  line-height: 2;
+  text-transform: uppercase;
+  color: $primary-white-color;
+  position: relative;
+  margin-bottom: 5px; */
+  }
+  .program-h3::before {
+    /*     content: '';
+    display: block;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: $accent-color;
+    position: absolute;
+    bottom: 50%;
+    transform: translate(-50%, 50%); */
+    left: -56px;
+  }
+  .program-education-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .program-education-list:nth-child(1) {
+    -webkit-box-flex: 0;
+        -ms-flex: none;
+            flex: none;
+    width: 176px;
+    color: lawngreen;
+  }
+  .program-education-list :nth-child(2) {
+    width: 155px;
+    color: orange;
+  }
+  .program-education-list :nth-child(3) {
+    width: 110px;
+    color: red;
+  }
+  .program-education-list-mod {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .program-key-points:not(:first-child) {
+    margin-top: 0px;
+    margin-left: 50px;
+  }
+  .program-h4 {
+    font-weight: bold;
+    line-height: 1.649;
+    color: #ff6b09;
+    margin-bottom: 5px;
+    height: 32px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    letter-spacing: inherit;
+  }
+  .program-points-description {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.67;
+    color: #b9b9b9;
+    opacity: 0.5;
+    letter-spacing: 0.08em;
+  }
+  .sub-title {
+    line-height: 1.36;
+    text-align: left;
+    width: 180px;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    display: inline-block;
+  }
 }
 /*# sourceMappingURL=main.css.map */
