--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -12,6 +12,16 @@
   overflow: hidden;
 }
 
+body {
+  background-color: #ffffff;
+  color: #111518;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.56;
+  letter-spacing: 0.08em;
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -111,11 +121,29 @@ ol {
 }
 
 @media screen and (min-width: 768px) {
+  .advantages {
+    padding: 40px 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .advantages {
+    padding: 108px 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
   .advantage-list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
+}
+
+.advantage-item {
+  position: relative;
+  width: 215px;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 767px) {
@@ -130,19 +158,15 @@ ol {
   }
 }
 
-.advantage-title {
-  position: relative;
-  width: 215px;
-  min-height: 60px;
-  margin: 0 auto;
-  padding-left: 70px;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 1.64;
-  letter-spacing: 0.08em;
+@media screen and (min-width: 1366px) {
+  .advantage-item {
+    width: 448px;
+    margin-right: 0;
+  }
 }
 
-.advantage-title::before {
+.advantage-item:nth-child(1)::before {
+  background-image: url(../images/icons/advantage-icon3.svg);
   content: '';
   position: absolute;
   left: 0;
@@ -152,6 +176,90 @@ ol {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-color: #757575;
+}
+
+@media screen and (min-width: 1366px) {
+  .advantage-item:nth-child(1)::before {
+    width: 102px;
+    height: 100px;
+  }
+}
+
+.advantage-item:nth-child(2)::before {
+  background-image: url(../images/icons/advantage-icon2.svg);
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 60px;
+  height: 60px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+@media screen and (min-width: 1366px) {
+  .advantage-item:nth-child(2)::before {
+    width: 102px;
+    height: 100px;
+  }
+}
+
+.advantage-item:nth-child(3)::before {
+  background-image: url(../images/icons/advantage-icon1.svg);
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 60px;
+  height: 60px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+@media screen and (min-width: 1366px) {
+  .advantage-item:nth-child(3)::before {
+    width: 102px;
+    height: 100px;
+  }
+}
+
+.advantage-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 60px;
+  padding-left: 70px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.64;
+  letter-spacing: 0.08em;
+}
+
+@media screen and (min-width: 1366px) {
+  .advantage-title {
+    font-size: 20px;
+    padding-right: 110px;
+    padding-left: 90px;
+    height: 102px;
+  }
+}
+
+.how-we-do-container {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.how-we-do-title {
+  text-align: center;
+}
+
+.how-we-do-icon {
+  width: 46px;
+  height: 48px;
 }
 /*# sourceMappingURL=main.css.map */
