--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -19,7 +19,6 @@
   margin-left: 63px;
   margin-top: 43px;
   position: relative;
-  align-self: center;
   &::after {
     content: '';
     display: block;
@@ -115,7 +114,7 @@
   display: block;
 }
 //-----------TABLET-768px-------------------------
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1365px) {
   .program {
     padding-top: 60px;
     padding-bottom: 172px;
@@ -133,6 +132,7 @@
       position: absolute;
       background: url('../images/content/tablet/program-tab@2x.png');
       background-size: contain;
+      // overflow: hidden;
       width: 384px;
       height: 280px;
       bottom: -139px;
@@ -174,5 +174,129 @@
     text-align: center;
     width: 100%;
     margin-top: 189px;
+  }
+}
+//---------------1366px-desktop--------------
+@media screen and (min-width: 1366px) {
+  .program {
+    padding-top: 120px;
+    padding-bottom: 363px;
+    position: relative;
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      border-top: 1px solid $primary-white-color;
+      transform: translateY(157px);
+      width: 100vw;
+      z-index: 1;
+    }
+  }
+  .program-container {
+    position: relative;
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      background: url('../images/content/desktop/program-desk@2x.png');
+      background-size: contain;
+      background-repeat: no-repeat;
+      // overflow: hidden;
+      opacity: 0.5;
+      width: 667px;
+      height: 502px;
+      bottom: -358px;
+      left: -152px;
+    }
+  }
+  .program-title {
+    font-size: 46px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+    text-align: left;
+  }
+  .program-list {
+    flex-direction: row;
+    margin-left: 0px;
+    margin-top: 100px;
+    justify-content: space-between;
+    align-items: start;
+
+    &::after {
+      content: 'none';
+      display: none;
+    }
+  }
+  .program-item {
+    padding-top: 60px;
+    padding-left: 0px;
+    box-sizing: content-box;
+    width: 240px;
+    &:not(:last-child) {
+      padding-bottom: 0px;
+    }
+    &:not(:last-child) {
+      &::before {
+        content: 'none';
+        display: none;
+      }
+    }
+  }
+  .program-h3 {
+    font-size: 20px;
+    line-height: 1.4;
+    text-transform: none;
+    &::first-letter {
+      font-size: 30px;
+      line-height: 0.93;
+    }
+    &::before {
+      content: '';
+      display: block;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background-color: $accent-color;
+      position: absolute;
+      top: -60px;
+      bottom: auto;
+      transform: translate(0%, -50%);
+      left: auto;
+      z-index: 2;
+    }
+  }
+  .program-education-list {
+    width: 240px;
+    display: block;
+  }
+  .program-h4 {
+    font-size: 20px;
+    display: block;
+    margin-bottom: 10px;
+  }
+  .program-key-points {
+    margin-top: 25px;
+    &:not(:first-child) {
+      margin-top: 25px;
+      margin-left: 0px;
+    }
+  }
+  .program-points-description {
+    font-size: 18px;
+    line-height: 1.56;
+    color: $primary-text-color;
+    letter-spacing: 0.08em;
+  }
+  .sub-title {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
   }
 }
