add basic markup and styles

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,1 +1,54 @@
 
+<section class="about">
+    <div class="container">
+        <h2 class="about-title">Teacher</h2>
+        <picture class="about-picture">
+            <source srcset="./images/content/mobile/about-mob.webp 1x,  ./images/content/mobile/about-mob@2x.webp 2x"
+                type="image/webp" media="(max-width: 767px)">
+            <source srcset="./images/content/mobile/about-mob.jpg 1x, ./images/content/mobile/about-mob@2x.jpg  2x"
+                type="image/jpg" media="(max-width: 767px)">
+            <source srcset="./images/content/tablet/about-tab.webp 1x, ./images/content/tablet/about-tab@2x.webp  2x"
+                type="image/webp" media="(min-width: 768px)">
+            <source srcset="./images/content/tablet/about-tab.jpg 1x, ./images/content/tablet/about-tab@2x.jpg  2x"
+                type="image/jpg" media="(min-width: 768px)">
+            <source
+                srcset="./images/content/desktop/about-desk.webp 1x, ./images/content/desktop/about-desk@2x.webp  2x"
+                type="image/webp" media="(min-width: 1366px)">
+            <source srcset="./images/content/desktop/about-desk.jpg 1x, ./images/content/desktop/about-desk@2x.jpg  2x"
+                type="image/jpg" media="(min-width: 1366px)">
+            <img src="#" alt="Преподаватель Елена Морева Teacher  Elena Moreva">
+        </picture>
+        <h3 class="about-name">Elena Moreva</h3>
+        <ul class="about-list">
+            <li>
+                <svg width="17" height="14">
+                    <use href="./images/icons/sprite.svg#icon-checked"></use>
+                </svg>
+                6 yeards of experience in preparing students for UPE
+            </li>
+            <li>
+                <svg width="17" height="14">
+                    <use href="./images/icons/sprite.svg#icon-checked"> </use>
+                </svg>
+                Own result of passing VNO - 197 points 2 years in a row
+            </li>
+            <li>
+                <svg width="17" height="14">
+                    <use href="./images/icons/sprite.svg#icon-checked"> </use>
+                </svg>
+                Passed excellent at the international analogue of UPE - Cambridge PET (Preliminary English Test)
+            </li>
+        </ul>
+        <!-- <span class="about-strip">___</span> -->
+        <p class="text-descr"> Graduated from the Institute of International Relations of the NAU with a degree in translator-analyst.
+            <br>
+            In spare time takes courses from the best universities in the world on effective teaching and essay
+            writing techniques.Completed: English Grammar and Essay Writing (Berkeley), English Grammar & Style (The
+            University of Queesland), How to Write an Essay (Berkeley), Academic and Business Writing (Berkeley),
+            The Art of Teaching (GEMS education), Powerful Tools for Teaching and Learning (University of Houston).
+        </p>
+        <a class="about-link" href="https://www.cambridgeenglish.org/">Cambrige English Entry Level Certificate</a>
+    </div>
+</section>
+
+
