--- a/src/partials/how-we-do.html
+++ b/src/partials/how-we-do.html
@@ -1,7 +1,7 @@
 <section class="how-we-do">
     <div class="how-we-do-container container">
         <h2 class="how-we-do-title title black-title">How do we do it</h2>
-        <div class="how-we-do-list-block">
+        <!-- <div class="how-we-do-list-block"> -->
             <ul class="how-we-do-list list">
                 <li class="how-we-do-item">
                     <div class="how-we-do-icon-wrapper">
@@ -9,8 +9,8 @@
                             <use href="./images/icons/sprite.svg#icon-program"></use>
                         </svg>
                     </div>
-                    <h2></h2>
-                    <p></p>
+                    <h3>Adapted program preparation for UPE</h3>
+                    <p>You will learn grammar and vocabulary at the same time. And you will learn how to write essays.</p>
                 </li>
                 <li class="how-we-do-item">
                     <div class="how-we-do-icon-wrapper">
@@ -18,8 +18,8 @@
                             <use href="./images/icons/sprite.svg#icon-mob-learn"></use>
                         </svg>
                     </div>
-                    <h2></h2>
-                    <p></p>
+                    <h3>Classroom and online learning</h3>
+                    <p>The teacher will help not only in the classroom, but also during home preparation. Parents can chat if they wish.</p>
                 </li>
                 <li class="how-we-do-item">
                     <div class="how-we-do-icon-wrapper">
@@ -27,8 +27,8 @@
                             <use href="./images/icons/sprite.svg#icon-book"></use>
                         </svg>
                     </div>
-                    <h2></h2>
-                    <p></p>
+                    <h3>The habit of reading in English</h3>
+                    <p>Articles from sources that are used in the development of this UPE will be received by phone twice a week.</p>
                 </li>
                 <li class="how-we-do-item">
                     <div class="how-we-do-icon-wrapper">
@@ -36,8 +36,8 @@
                             <use href="./images/icons/sprite.svg#icon-support"></use>
                         </svg>
                     </div>
-                    <h2></h2>
-                    <p></p>
+                    <h3>Psychological support</h3>
+                    <p>We will teach you testing techniques, the ability to plan your confidence training in itself.</p>
                 </li>
                 <li class="how-we-do-item">
                     <div class="how-we-do-icon-wrapper">
@@ -45,8 +45,9 @@
                             <use href="./images/icons/sprite.svg#icon-student"></use>
                         </svg>
                     </div>
-                    <h2></h2>
-                    <p></p>
+                    <h3>Training on copyright manuals</h3>
+                    <p>You don't have to waste your time on a search for material and to buy anything extra. We have compiled 2 manuals for
+                    you.</p>
                 </li>
                 <li class="how-we-do-item">
                     <div class="how-we-do-icon-wrapper">
@@ -54,10 +55,11 @@
                             <use href="./images/icons/sprite.svg#icon-audio"></use>
                         </svg>
                     </div>
-                    <h2></h2>
-                    <p></p>
+                    <h3>Ability to comprehend spoken English</h3>
+                    <p>“F.R.I.E.N.D.S” won't help you. You will listen regularly and analyze audio recordings in accordance with the studied
+                    vocabulary.</p>
                 </li>
             </ul>
-        </div>
+        <!-- </div> -->
     </div>
 </section>
