--- a/src/sass/layout/_how-we-do.scss
+++ b/src/sass/layout/_how-we-do.scss
@@ -1,10 +1,36 @@
 .how-we-do-container {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .how-we-do-title {
+  margin-bottom: 30px;
+
   text-align: center;
+}
+
+.how-we-do-item {
+  padding: 0 18px;
+  padding-bottom: 6px;
+
+  width: 100%;
+  min-height: 280px;
+
+  background-color: $primary-white-color;
+  box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+}
+
+.how-we-do-item:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.how-we-do-icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 98px;
+  //   margin-bottom: 20px;
 }
 
 .how-we-do-icon {
