--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -250,12 +250,40 @@ ol {
 }
 
 .how-we-do-container {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .how-we-do-title {
+  margin-bottom: 30px;
   text-align: center;
+}
+
+.how-we-do-item {
+  padding: 0 18px;
+  padding-bottom: 6px;
+  width: 100%;
+  min-height: 280px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+}
+
+.how-we-do-item:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.how-we-do-icon-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 98px;
 }
 
 .how-we-do-icon {
