--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,11 +1,12 @@
 body {
-  background-color: #ffffff;
-  color: #111518;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
-  font-size: 20px;
-  line-height: 1.56;
+  font-size: 12px;
+  line-height: (20px / 12px); // 167%
   letter-spacing: 0.08em;
+
+  color: $primary-text-color;
+  background-color: $primary-white-color;
 }
 
 img {
