--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -20,32 +20,40 @@
         </picture>
         <h3 class="about-name">Elena Moreva</h3>
         <ul class="about-list">
-            <li>
-                <svg width="17" height="14">
+            <div class="about-tumb">
+                <svg class="about-check" width="17" height="14">
                     <use href="./images/icons/sprite.svg#icon-checked"></use>
                 </svg>
+            <li class="about-item">
+                
                 6 yeards of experience in preparing students for UPE
             </li>
-            <li>
-                <svg width="17" height="14">
+            </div>
+            <div class="about-tumb">
+                <svg class="about-check" width="17" height="14">
                     <use href="./images/icons/sprite.svg#icon-checked"> </use>
                 </svg>
+            <li class="about-item">
                 Own result of passing VNO - 197 points 2 years in a row
             </li>
-            <li>
-                <svg width="17" height="14">
-                    <use href="./images/icons/sprite.svg#icon-checked"> </use>
-                </svg>
+            </div>
+            <div class="about-tumb">
+            <svg class="about-check" width="17" height="14">
+            <use href="./images/icons/sprite.svg#icon-checked"> </use>
+            </svg>
+            <li class="about-item">
                 Passed excellent at the international analogue of UPE - Cambridge PET (Preliminary English Test)
             </li>
+            </div>
         </ul>
-        <!-- <span class="about-strip">___</span> -->
+       
         <p class="text-descr"> Graduated from the Institute of International Relations of the NAU with a degree in translator-analyst.
             <br>
             In spare time takes courses from the best universities in the world on effective teaching and essay
             writing techniques.Completed: English Grammar and Essay Writing (Berkeley), English Grammar & Style (The
             University of Queesland), How to Write an Essay (Berkeley), Academic and Business Writing (Berkeley),
             The Art of Teaching (GEMS education), Powerful Tools for Teaching and Learning (University of Houston).
+            
         </p>
         <a class="about-link" href="https://www.cambridgeenglish.org/">Cambrige English Entry Level Certificate</a>
     </div>
