--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -1,53 +1,68 @@
 .about-list {
   list-style: none;
   margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 1.21;
+  font-weight: 600;
+  letter-spacing: 0.06em;
   &::after {
     content: '_____';
     color: $accent-color;
-    font-size: 20px;
-    line-height: 1.65;
   }
+}
+.text-descr {
+  width: 279px;
+  color: $primary-text-color;
+  font-size: 12px;
+  line-height: 1.67;
+  font-style: normal;
+  margin-bottom: 10px;
+  text-align: left;
+}
+.about-title {
+  font-weight: 800;
+
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+  font-style: normal;
+  margin-bottom: 20px;
+}
+.about-name {
+  display: block;
+  font-weight: 800;
+  line-height: 1.2;
+  font-style: normal;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid $primary-text-color;
+  margin-bottom: 20px;
+  letter-spacing: 0.08em;
+}
+
+.about-link {
+  color: $accent-color;
+  font-size: 12px;
+  line-height: 1.67;
+  font-style: normal;
+}
+.about-picture {
+  margin-bottom: 20px;
+  object-fit: cover;
+}
+.about-item {
+  padding-bottom: 25px;
+  text-align: left;
+  display: block;
+  width: 253px;
+}
+.about-check {
+  margin-right: 10px;
+}
+.about-tumb {
+  display: flex;
 }
 
 @media screen and (min-width: 480px) {
-  .about-title {
-    font-weight: 800;
-    font-size: 20px;
-    line-height: 1.3;
-    letter-spacing: 0.03em;
-    font-style: normal;
-    margin-bottom: 20px;
-  }
-
-  .text-descr {
-    color: $primary-text-color;
-    font-size: 12px;
-    line-height: 1.67;
-    font-style: normal;
-    margin-bottom: 10px;
-  }
-
-  .about-name {
-    display: block;
-    font-weight: 800;
-    line-height: 1.2;
-    font-style: normal;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid $primary-text-color;
-    margin-bottom: 20px;
-  }
-
-  .about-link {
-    color: $accent-color;
-    font-size: 12px;
-    line-height: 1.67;
-    font-style: normal;
-  }
-  .about-picture {
-    margin-bottom: 20px;
-    object-fit: cover;
-  }
 }
 @media screen and (min-width: 768px) {
 }
