--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -2,6 +2,7 @@
 <section class="about">
     <div class="container">
         <h2 class="about-title">Teacher</h2>
+        <div class="about-tab">
         <picture class="about-picture">
             <source srcset="./images/content/mobile/about-mob.webp 1x,  ./images/content/mobile/about-mob@2x.webp 2x"
                 type="image/webp" media="(max-width: 767px)">
@@ -18,6 +19,7 @@
                 type="image/jpg" media="(min-width: 1366px)">
             <img src="#" alt="Преподаватель Елена Морева Teacher  Elena Moreva">
         </picture>
+        <div>
         <h3 class="about-name">Elena Moreva</h3>
         <ul class="about-list">
             <div class="about-tumb">
@@ -46,7 +48,7 @@
             </li>
             </div>
         </ul>
-       
+    
         <p class="text-descr"> Graduated from the Institute of International Relations of the NAU with a degree in translator-analyst.
             <br>
             In spare time takes courses from the best universities in the world on effective teaching and essay
@@ -56,6 +58,8 @@
             
         </p>
         <a class="about-link" href="https://www.cambridgeenglish.org/">Cambrige English Entry Level Certificate</a>
+    </div>
+    </div>
     </div>
 </section>
 
