--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -21,7 +21,6 @@
 }
 .about-title {
   font-weight: 800;
-
   line-height: 1.3;
   letter-spacing: 0.03em;
   font-style: normal;
@@ -36,7 +35,6 @@
   padding-bottom: 10px;
   border-bottom: 1px solid $primary-text-color;
   margin-bottom: 20px;
-  letter-spacing: 0.08em;
 }
 
 .about-link {
@@ -65,6 +63,39 @@
 @media screen and (min-width: 480px) {
 }
 @media screen and (min-width: 768px) {
+  .about-title {
+    font-size: 46px;
+    margin-bottom: 30px;
+  }
+  .about-item {
+    width: 402px;
+    padding-bottom: 30px;
+  }
+  .about-tab {
+    display: flex;
+  }
+  .about-picture {
+    margin-right: 40px;
+  }
+  .about-name {
+    padding-top: 0px;
+  }
+  .text-descr {
+    width: 402px;
+  }
 }
 @media screen and (min-width: 1366px) {
+  .about-title {
+    margin-bottom: 50px;
+  }
+  .about-name {
+    font-size: 30px;
+    margin-bottom: 30px;
+    padding-bottom: 15px;
+  }
+  .about-item {
+    width: 402px;
+    font-size: 16px;
+    line-height: 1.25;
+  }
 }
