--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -12,8 +12,7 @@
                 type="image/webp" media="(min-width: 768px)">
             <source srcset="./images/content/tablet/about-tab.jpg 1x, ./images/content/tablet/about-tab@2x.jpg  2x"
                 type="image/jpg" media="(min-width: 768px)">
-            <source
-                srcset="./images/content/desktop/about-desk.webp 1x, ./images/content/desktop/about-desk@2x.webp  2x"
+            <source srcset="./images/content/desktop/about-desk.webp 1x, ./images/content/desktop/about-desk@2x.webp 2x"
                 type="image/webp" media="(min-width: 1366px)">
             <source srcset="./images/content/desktop/about-desk.jpg 1x, ./images/content/desktop/about-desk@2x.jpg  2x"
                 type="image/jpg" media="(min-width: 1366px)">
@@ -49,12 +48,14 @@
             </div>
         </ul>
     
-        <p class="text-descr"> Graduated from the Institute of International Relations of the NAU with a degree in translator-analyst.
-            <br>
+        <p class="text-descr">
+             Graduated from the Institute of International Relations of the NAU with a degree in translator-analyst. <br>
+            
             In spare time takes courses from the best universities in the world on effective teaching and essay
-            writing techniques.Completed: English Grammar and Essay Writing (Berkeley), English Grammar & Style (The
+            writing techniques.<br>
+            Completed: English Grammar and Essay Writing (Berkeley), English Grammar & Style (The
             University of Queesland), How to Write an Essay (Berkeley), Academic and Business Writing (Berkeley),
-            The Art of Teaching (GEMS education), Powerful Tools for Teaching and Learning (University of Houston).
+            The Art of Teaching (GEMS education), Powerful Tools for Teaching and Learning (University of Houston). <br>
             
         </p>
         <a class="about-link" href="https://www.cambridgeenglish.org/">Cambrige English Entry Level Certificate</a>
