--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -94,8 +94,11 @@
     padding-bottom: 15px;
   }
   .about-item {
-    width: 402px;
+    width: 642px;
     font-size: 16px;
     line-height: 1.25;
+  }
+  .text-descr {
+    width: 642px;
   }
 }
