Fix section geometry and add animation

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -9,7 +9,7 @@
             But you’re guaranteed to get <br>
             <span class="hero-guarantee-accent">+25 points</span>
          </b>
-         <button class="button hero-button" type="button">i want a free lesson</button>
+         <a class="button hero-button link" href="#registration" type="button">i want a free lesson</ф>
       </div>
       
       <div class="hero-wrapper">
