--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,14 +1,28 @@
 .hero {
    padding: 20px 0;
-   // background-image: url(../images/content/mobile/hero-bg-mob.webp);
-   // box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);;
+   // background-repeat: no-repeat;
+   // background-position: center;
+   // background-size: 480px 100%;
+
+   //   background-image: url(../images/content/mobile/hero-bg-mob.webp);
+   //   background-color: red;
+
+
+   // background-image: linear-gradient(140deg, rgba(0,0,0,0.04) 0%, rgba(0,0,0,0) 12%, rgba(0,0,0,0) 100%),
+   // url(../images/content/mobile/hero-bg-mob.webp);
+   // background-color: rgba(0, 0, 0, 0.04);
+   // box-shadow: -5px 21px 26px red;;
  
    @media screen and (min-width: 768px) {
-     padding: 30px 0;
+     padding: 30px 0 65px;
+   //   background-size: 768px 100%;
+   //   background-image: url(../images/content/tablet/hero-bg-tab.webp);
    }
  
-   @media screen and (min-width: 768px) {
+   @media screen and (min-width: 1366px) {
      padding: 13px 0;
+   //   background-size: 1366px 100%;
+   //   background-image: url(../images/content/desktop/hero-bg-desk.webp);
    }
  }
 
@@ -21,6 +35,11 @@
 } 
 
 .hero-content {
+
+   @media screen and (max-width: 767) {
+      margin-bottom: 30px;
+   }
+   
    
    @media screen and (min-width: 768px) {
       width: 332px;
@@ -35,6 +54,8 @@
 .hero-title {
    margin-bottom: 30px;
 
+   color: $primary-black-color;
+
    font-weight: 800;
    font-size: 20px;
    line-height: 1.3;
@@ -46,6 +67,7 @@
 
    @media screen and (min-width: 1366px) {
       font-size: 58px;
+      margin-bottom: 100px;
    }
 }
 
@@ -64,6 +86,8 @@
 .hero-guarantee {
    display: block;
    margin-bottom: 30px; 
+
+   color: $primary-black-color;
    font-weight: 700; 
    font-size: 14px;
    line-height: 1.57;
@@ -81,39 +105,52 @@
 }
 
 .hero-button {
-   margin-bottom: 30px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
 
-   text-transform: uppercase;
+   @media screen and (min-width: 768px) {
+      margin-left: 0;
+   }
+
 }
 
-.hero-background {
-   // @keyframes beat {
-   //    0% {
-   //      transform: scale(1);
-   //    }
+.hero-wrapper {
+   @keyframes fade-in {
+0% {
+   opacity: 0;
+}
+
+100% {
+   opacity: 1;
+}
+
+      // 0% {
+      //   transform: scale(1);
+      // }
     
-   //    14% {
-   //      transform: scale(1.15);
-   //    }
+      // 14% {
+      //   transform: scale(1.15);
+      // }
     
-   //    28% {
-   //      transform: scale(1);
-   //    }
+      // 28% {
+      //   transform: scale(1);
+      // }
     
-   //    42% {
-   //      transform: scale(1.15);
-   //    }
+      // 42% {
+      //   transform: scale(1.15);
+      // }
     
-   //    70% {
-   //      transform: scale(1);
-   //    }
-   //  }
+      // 70% {
+      //   transform: scale(1);
+      // }
+    }
     
-   //  .hero-background {
-   //    animation-name: beat;
-   //    animation-duration: 750ms;
-   //    animation-timing-function: ease-in-out;
-   //  }
+    .hero-background {
+      animation-name: fade-in;
+      animation-duration: 1000ms;
+      animation-timing-function: ease-in-out;
+    }
 
 
 
@@ -130,3 +167,5 @@
       width: 842px;
    }
 }
+
+
