--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,18 +1,20 @@
-<article class="contacts-section">
-  <h2 class="contacts-title list">Registration for a <span class="contacts-title--color-word">free</span> phone <span
-      class="contacts-title--color-word">consultation</span> on the nuances of English UPE</h2>
-  <p class="contacts-text list">Leave a request for participation in a <span class="contacts-title--color-word">free
+<section class="contacts">
+  <h2 class="contacts-title list">Registration for a <span class="contacts-color-word">free</span> phone <span
+      class="contacts-color-word">consultation</span> on the nuances of English UPE</h2>
+  <p class="contacts-text list">Leave a request for participation in a <span class="contacts-color-word">free
       lesson</span>.<br> A consultant will contact you and answer your questions</p>
 
   <form class="contacts-form">
-    <label class="contacts-form__legend" for="username">
-      <input class="contacts-form__name--input list" type="text" name="user-name" id="username" placeholder="Name"
-        required autocomplete="off" /></label>
-    <label class="contacts-form__legend" for="phone">
-      <input class="contacts-form__phone--input list" type="tel" name="user-tel" id="phone" placeholder="Phone"
+    <label class="contacts-form-legend" for="username">
+      <input class="contacts-form-name list" type="text" name="user-name" id="username" placeholder="" required
+        autocomplete="off" />
+      <!-- <div class="placeholder-color">Name*</div> -->
+    </label>
+    <label class="contacts-form-legend" for="phone">
+      <input class="contacts-form-phone list" type="tel" name="user-tel" id="phone" placeholder="Phone*"
         autocomplete="off" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="096-111-11-11" /></label>
 
     <button type="submit" class="button">i want a free lesson</button>
   </form>
 
-</article>
+</section>
