--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -49,13 +49,14 @@
         </ul>
     
         <p class="text-descr">
-             Graduated from the Institute of International Relations of the NAU with a degree in translator-analyst. <br>
-            
+             Graduated from the Institute of International Relations of the NAU with a degree in translator-analyst. </p>
+        <p class="text-descr">
             In spare time takes courses from the best universities in the world on effective teaching and essay
-            writing techniques.<br>
+            writing techniques.</p>
+            <p class="text-descr">
             Completed: English Grammar and Essay Writing (Berkeley), English Grammar & Style (The
             University of Queesland), How to Write an Essay (Berkeley), Academic and Business Writing (Berkeley),
-            The Art of Teaching (GEMS education), Powerful Tools for Teaching and Learning (University of Houston). <br>
+            The Art of Teaching (GEMS education), Powerful Tools for Teaching and Learning (University of Houston). </p>
             
         </p>
         <a class="about-link" href="https://www.cambridgeenglish.org/">Cambrige English Entry Level Certificate</a>
